# pong-mp

./: CMakeLists.txt  startPong.sh
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: ballFragmentShader.glsl  ballVertexShader.glsl  paddleFragmentShader.glsl  paddleVertexShader.glsl
src/: client.cpp  client.h  game.cpp  game.h  main.cpp  networking.cpp  networking.h  server.cpp  server.h  shader.h  util.h
